add gitignore + ipython => 4.0.0 test

--- a/buildout-dev.cfg
+++ b/buildout-dev.cfg
@@ -10,11 +10,11 @@ eggs +=
 #    mercurial
 #    bpython
     ipython
-    pyzmq
-    jinja2
-    tornado
-    jsonschema
-#    jupyter
+#    pyzmq
+#    jinja2
+#    tornado
+#    jsonschema
+    jupyter
 #    ipykernel
 #    pep8
 #    autopep8
@@ -22,4 +22,4 @@ eggs +=
 interpreter = python
 
 [versions]
-ipython=3.2.2
+#ipython=3.2.2
