--- a/buildout-dev_old.cfg
+++ b/buildout-dev_old.cfg
@@ -8,22 +8,20 @@ versions = versions
 
 eggs +=
 #    mercurial
-    bpython
-    ipython[notebook]
-#   path.py
+#    bpython
+    ipython
 #    pyzmq
-#    tornado
 #    jinja2
+#    tornado
 #    jsonschema
-#    jupyter
+    jupyter
 #    ipykernel
 #    pep8
 #    autopep8
+
+extra-paths = /usr/local/lib/python3.4/dist-packages/
 
 interpreter = python
 
 [versions]
 #ipython=3.2.2
-#pyzmq=13.1.0
-#tornado=4.2.1
-#path.py=7.7.1
