--- a/buildout.cfg
+++ b/buildout.cfg
@@ -18,5 +18,11 @@ eggs =
 #    cherrypy
 #    pyramid
 
+# ~# extra-paths = /usr/local/lib/python3.4/dist-packages/
+# ~# /usr/lib/python3/dist-packages
+# ~# /usr/local/lib/python3.4/dist-packages
+extra-paths = 
+    /opt/python/Python-3.5.0-build/lib/python3.5/site-packages/
+
 interpreter = python
 [versions]
